finihsing the training part

--- a/question_b.ipynb
+++ b/question_b.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "((280, 7), (280,), (120, 7), (120,))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,43 +209,24 @@
     "data = df.values\n",
     "np.random.shuffle(data)\n",
     "\n",
+    "#normalization, and keep only first two decimals\n",
+    "data[:, :-1] = np.round((data[:, :-1] - np.mean(data[:, :-1], axis=0))/ np.std(data[:, :-1], axis=0), decimals=2)\n",
+    "\n",
     "train = data[:int(len(data)*(1-test_propotion)), :]\n",
     "test = data[int(len(data)*(1-test_propotion)):, :]\n",
     "\n",
     "X_train, y_train = train[:, :-1], train[:, -1]\n",
     "X_test, y_test = test[:, :-1], test[:, -1]\n",
     "\n",
-    "train_X = (trainX- np.mean(trainX, axis=1))/ np.std(trainX, axis=1)\n",
-    "\n",
     "X_train.shape, y_train.shape, X_test.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([308.  , 106.  ,   3.  ,   3.5 ,   2.5 ,   8.21,   1.  ]), 106.57620102297602)\n",
-      "(array([321.  , 109.  ,   4.  ,   4.  ,   4.  ,   8.68,   1.  ]), 110.7773621609891)\n",
-      "(array([303.  , 100.  ,   2.  ,   3.  ,   3.5 ,   8.06,   1.  ]), 104.63062157623156)\n",
-      "(array([295.  ,  99.  ,   2.  ,   2.5 ,   3.  ,   7.65,   0.  ]), 102.11265137791972)\n",
-      "(array([316. , 102. ,   3. ,   2. ,   3. ,   7.4,   0. ]), 109.22003254991313)\n",
-      "(array([311.  ,  99.  ,   1.  ,   2.5 ,   3.  ,   8.43,   1.  ]), 107.36698837089888)\n",
-      "(array([340. , 120. ,   4. ,   5. ,   5. ,   9.5,   1. ]), 117.48734191479558)\n",
-      "(array([331.  , 117.  ,   4.  ,   4.5 ,   5.  ,   9.42,   1.  ]), 114.38374531303273)\n",
-      "(array([331.  , 115.  ,   5.  ,   4.  ,   3.5 ,   9.44,   1.  ]), 114.33934648712157)\n",
-      "(array([305.  , 108.  ,   5.  ,   3.  ,   3.  ,   8.48,   0.  ]), 105.61659795347182)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in list(zip(X_train, np.std(X_train, axis=1)))[:10]:\n",
-    "    print(i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -267,67 +248,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# Project 1, starter code part b\n",
-    "#\n",
-    "\n",
     "import tensorflow as tf\n",
-    "import pylab as plt\n",
+    "import math\n",
+    "# import pylab as plt\n",
     "\n",
     "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
     "\n",
-    "NUM_FEATURES = 7\n",
+    "NUM_FEATURES = len(X_train[0])\n",
+    "NUM_LABELS = 1\n",
     "\n",
-    "learning_rate = 0.01\n",
-    "epochs = 1000\n",
+    "learning_rate = 1e-3\n",
+    "beta = 1e-3\n",
+    "epochs = 100\n",
     "batch_size = 8\n",
-    "num_neuron = 30\n",
-    "seed = 10\n",
+    "hidden_units = 10\n",
+    "\n",
+    "idx = np.arange(X_train.shape[0])\n",
     "\n",
     "\n",
-    "idx = np.arange(X_data.shape[0])\n",
-    "np.random.shuffle(idx)\n",
-    "X_data, Y_data = X_data[idx], Y_data[idx]\n",
-    "\n",
-    "# experiment with small datasets\n",
-    "trainX = X_data[:100]\n",
-    "trainY = Y_data[:100]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Create the model\n",
     "x = tf.placeholder(tf.float32, [None, NUM_FEATURES])\n",
-    "y_ = tf.placeholder(tf.float32, [None, 1])\n",
+    "y_ = tf.placeholder(tf.float32, [None, NUM_LABELS])\n",
     "\n",
-    "# Build the graph for the deep net\n",
-    "weights = tf.Variable(tf.truncated_normal([NUM_FEATURES, 1], stddev=1.0 / np.sqrt(NUM_FEATURES), dtype=tf.float32), name='weights')\n",
-    "biases = tf.Variable(tf.zeros([1]), dtype=tf.float32, name='biases')\n",
-    "y = tf.matmul(x, weights) + biases\n",
+    "w1 = tf.Variable(tf.truncated_normal(\n",
+    "    [NUM_FEATURES, hidden_units],\n",
+    "    stddev=1.0 / math.sqrt(NUM_FEATURES)),\n",
+    "    name='weights')\n",
+    "b1 = tf.Variable(tf.zeros([hidden_units]),name='biases')\n",
+    "h1 = tf.nn.relu(tf.matmul(x, w1) + b1)\n",
+    "\n",
+    "w2 = tf.Variable(tf.truncated_normal(\n",
+    "    [hidden_units, 1],\n",
+    "    stddev=1.0 / math.sqrt(hidden_units)),\n",
+    "    name='weights')\n",
+    "b2 = tf.Variable(tf.zeros([1]), name='biases')\n",
+    "y = tf.matmul(h1, w2) + b2\n",
     "\n",
     "\n",
-    "\n",
-    "#Create the gradient descent optimizer with the given learning rate.\n",
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
-    "loss = tf.reduce_mean(tf.square(y_ - y))\n",
+    "\n",
+    "regularization = tf.nn.l2_loss(w1) + tf.nn.l2_loss(w2)\n",
+    "\n",
+    "#???\n",
+    "loss = tf.reduce_mean(tf.square(y_ - y) + beta*regularization ) \n",
     "train_op = optimizer.minimize(loss)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "\tsess.run(tf.global_variables_initializer())\n",
-    "\ttrain_err = []\n",
-    "\tfor i in range(epochs):\n",
-    "\t\ttrain_op.run(feed_dict={x: trainX, y_: trainY})\n",
-    "\t\terr = loss.eval(feed_dict={x: trainX, y_: trainY})\n",
-    "\t\ttrain_err.append(err)\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    train_err = []\n",
+    "    for i in range(epochs):\n",
+    "        np.random.shuffle(idx)\n",
+    "        X_train, y_train = X_train[idx], y_train[idx]\n",
+    "        train_op.run(feed_dict={x:X_train, y: y_train})\n",
+    "        err = loss.eval(feed_dict={x: X_train, y: y_train})\n",
+    "        print('err', err)\n",
+    "        train_err.append(err)\n",
     "\n",
-    "\t\tif i % 100 == 0:\n",
-    "\t\t\tprint('iter %d: train error %g'%(i, train_err[i]))\n",
+    "        if i % 10 == 0:\n",
+    "            print('iter %d: train error %g'%(i, train_err[i]))\n",
     "\n",
     "# plot learning curves\n",
-    "plt.figure(1)\n",
-    "plt.plot(range(epochs), train_err)\n",
-    "plt.xlabel(str(epochs) + ' iterations')\n",
-    "plt.ylabel('Train Error')\n",
-    "plt.show()\n"
+    "# plt.figure(1)\n",
+    "# plt.plot(range(epochs), train_err)\n",
+    "# plt.xlabel(str(epochs) + ' iterations')\n",
+    "# plt.ylabel('Train Error')\n",
+    "# plt.show()\n"
    ]
   },
   {
