Updated the part 2 - part 4 code based on the specific question

--- a/assignment1_question_a/Part_A_Question_2.ipynb
+++ b/assignment1_question_a/Part_A_Question_2.ipynb
@@ -53,7 +53,7 @@
     "def main():\n",
     "    params = []\n",
     "    param1 = {}\n",
-    "    param1['weight_decay_parameter'] = 0.000001\n",
+    "    param1['weight_decay_parameter'] = 1e-6\n",
     "    param1['batch_size'] = 4\n",
     "    param1['hidden_layer_neuron_num'] = 10\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
@@ -79,7 +79,8 @@
     "#         accs.append(train(param))\n",
     "    plt.figure()\n",
     "    for i in range(len(params)):\n",
-    "        plt.plot(range(epochs), accs[i][0], label='Batch size:' + str(params[i]['batch_size']))\n",
+    "        plt.plot(range(epochs), accs[i][0], label='Batch size:' +\n",
+    "                 str(params[i]['batch_size']))\n",
     "    plt.xlabel('epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
@@ -90,6 +91,9 @@
     "    plt.xlabel('Batch Size')\n",
     "    plt.ylabel('Time Taken to Run One Epoch')   \n",
     "    plt.show()\n",
+    "    \n",
+    "# only for test\n",
+    "    \n",
     "        \n",
     "\n",
     "if __name__ == '__main__':\n",
