--- a/assignment1_question_a/ Part_A_Question_3.ipynb
+++ b/assignment1_question_a/ Part_A_Question_3.ipynb
@@ -13,9 +13,9 @@
     "def main():\n",
     "    params = []\n",
     "    param1 = {}\n",
-    "    param1['weight_decay_parameter'] = 0.000001\n",
-    "    param1['batch_size'] = 4\n",
-    "    param1['hidden_layer_neuron_num'] = 10\n",
+    "    param1['weight_decay_parameter'] = 1e-6\n",
+    "    param1['batch_size'] = 64 #temp\n",
+    "    param1['hidden_layer_neuron_num'] = 5\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
@@ -23,13 +23,13 @@
     "    param5 = param1.copy()\n",
     "    \n",
     "    params.append(param1)\n",
-    "    param2['batch_size'] = 8\n",
+    "    param2['hidden_layer_neuron_num'] = 10\n",
     "    params.append(param2)\n",
-    "    param3['batch_size'] = 16\n",
+    "    param3['hidden_layer_neuron_num'] = 15\n",
     "    params.append(param3)\n",
-    "    param4['batch_size'] = 32\n",
+    "    param4['hidden_layer_neuron_num'] = 20\n",
     "    params.append(param4)\n",
-    "    param5['batch_size'] = 64\n",
+    "    param5['hidden_layer_neuron_num'] = 25\n",
     "    params.append(param5)\n",
     "    no_threads = mp.cpu_count()\n",
     "    p = mp.Pool(processes=no_threads)\n",
@@ -39,7 +39,8 @@
     "#         accs.append(train(param))\n",
     "    plt.figure()\n",
     "    for i in range(len(params)):\n",
-    "        plt.plot(range(epochs), accs[i][0], label='Batch size:' + str(params[i]['batch_size']))\n",
+    "        plt.plot(range(epochs), accs[i][0], label='Number of hidden-layer neurons'\n",
+    "                 + str(params[i]['hidden_layer_neuron_num']))\n",
     "    plt.xlabel('epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
