Preparation for part 5

--- a/assignment1_question_a/ Part_A_Question_4.ipynb
+++ b/assignment1_question_a/ Part_A_Question_4.ipynb
@@ -14,9 +14,10 @@
     "    params = []\n",
     "    param1 = {}\n",
     "    param1['weight_decay_parameter'] = 0\n",
-    "    param1['batch_size'] = 64 //temp\n",
-    "    param1['hidden_layer_neuron_num'] = 15 //temp\n",
+    "    param1['batch_size'] = 64 #temp\n",
+    "    param1['hidden_layer_neuron_num'] = 15 #temp\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
+    "    param1['hidden_layer_num'] = 1\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
     "    param4 = param1.copy()\n",
@@ -34,9 +35,6 @@
     "    no_threads = mp.cpu_count()\n",
     "    p = mp.Pool(processes=no_threads)\n",
     "    accs = p.map(train, params)\n",
-    "#     accs = []\n",
-    "#     for param in params:\n",
-    "#         accs.append(train(param))\n",
     "    plt.figure()\n",
     "    for i in range(len(params)):\n",
     "        plt.plot(range(epochs), accs[i][0], label='Weight decay parameter:'\n",
