--- a/assignment1_question_a/Part_A_Question_2.ipynb
+++ b/assignment1_question_a/Part_A_Question_2.ipynb
@@ -57,16 +57,17 @@
     "    param1['batch_size'] = 4\n",
     "    param1['hidden_layer_neuron_num'] = 10\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
+    "    param1['hidden_layer_num'] = 1\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
     "    param4 = param1.copy()\n",
     "    param5 = param1.copy()\n",
     "    \n",
-    "    params.append(param1)\n",
-    "    param2['batch_size'] = 8\n",
-    "    params.append(param2)\n",
-    "    param3['batch_size'] = 16\n",
-    "    params.append(param3)\n",
+    "#     params.append(param1)\n",
+    "#     param2['batch_size'] = 8\n",
+    "#     params.append(param2)\n",
+    "#     param3['batch_size'] = 16\n",
+    "#     params.append(param3)\n",
     "    param4['batch_size'] = 32\n",
     "    params.append(param4)\n",
     "    param5['batch_size'] = 64\n",
@@ -74,13 +75,10 @@
     "    no_threads = mp.cpu_count()\n",
     "    p = mp.Pool(processes=no_threads)\n",
     "    accs = p.map(train, params)\n",
-    "#     accs = []\n",
-    "#     for param in params:\n",
-    "#         accs.append(train(param))\n",
     "    plt.figure()\n",
     "    for i in range(len(params)):\n",
-    "        plt.plot(range(epochs), accs[i][0], label='Batch size:' +\n",
-    "                 str(params[i]['batch_size']))\n",
+    "        plt.plot(range(epochs), accs[i][0], label='Batch size:' \n",
+    "                 + str(params[i]['batch_size']))\n",
     "    plt.xlabel('epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
