--- a/assignment1_question_a/ Part_A_Question_3.ipynb
+++ b/assignment1_question_a/ Part_A_Question_3.ipynb
@@ -17,6 +17,7 @@
     "    param1['batch_size'] = 64 #temp\n",
     "    param1['hidden_layer_neuron_num'] = 5\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
+    "    param1['hidden_layer_num'] = 1\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
     "    param4 = param1.copy()\n",
@@ -34,9 +35,6 @@
     "    no_threads = mp.cpu_count()\n",
     "    p = mp.Pool(processes=no_threads)\n",
     "    accs = p.map(train, params)\n",
-    "#     accs = []\n",
-    "#     for param in params:\n",
-    "#         accs.append(train(param))\n",
     "    plt.figure()\n",
     "    for i in range(len(params)):\n",
     "        plt.plot(range(epochs), accs[i][0], label='Number of hidden-layer neurons'\n",
