Update on question 2-4

--- a/assignment1_question_a/Part_A_Question_2.ipynb
+++ b/assignment1_question_a/Part_A_Question_2.ipynb
@@ -85,15 +85,13 @@
     "    plt.show()\n",
     "    \n",
     "    plt.figure()\n",
-    "    plt.plot([4,8,16,32, 64], [accs[0][1], accs[1][1], acc[2][1], acc[3][1],acc[4][1]])\n",
+    "    for i in range(len(params)):\n",
+    "        plt.scatter(params[i]['batch_size'], accs[i][1])\n",
     "    plt.xlabel('Batch Size')\n",
     "    plt.ylabel('Time Taken to Run One Epoch')   \n",
     "    plt.show()\n",
-    "    \n",
-    "# only for test\n",
-    "    \n",
-    "        \n",
     "\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "    main()"
    ]
