Refactored some of the functions

--- a/assignment1_question_a/ Part_A_Question_3.ipynb
+++ b/assignment1_question_a/ Part_A_Question_3.ipynb
@@ -90,7 +90,7 @@
     "    for i in range(len(params)):\n",
     "        plt.plot(range(epochs), accs[i][0], label='Number of hidden-layer neurons: '\n",
     "                 + str(params[i]['hidden_layer_neuron_num']))\n",
-    "    plt.xlabel('epochs')\n",
+    "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
