--- a/assignment1_question_a/Part_A_Question_2.ipynb
+++ b/assignment1_question_a/Part_A_Question_2.ipynb
@@ -79,7 +79,7 @@
     "    for i in range(len(params)):\n",
     "        plt.plot(range(epochs), accs[i][0], label='Batch size:' \n",
     "                 + str(params[i]['batch_size']))\n",
-    "    plt.xlabel('epochs')\n",
+    "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
