--- a/assignment1_question_a/Part_A_Question_5.ipynb
+++ b/assignment1_question_a/Part_A_Question_5.ipynb
@@ -505,7 +505,7 @@
     "        plt.plot(range(epochs), accs[i][0], label='Train Accuracy')\n",
     "        plt.plot(range(epochs), accs[i][1], label='Test Accuracy')\n",
     "        \n",
-    "    plt.xlabel('epochs')\n",
+    "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Accuracy')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
