--- a/assignment1_question_a/ Part_A_Question_4.ipynb
+++ b/assignment1_question_a/ Part_A_Question_4.ipynb
@@ -79,7 +79,7 @@
     "    for i in range(len(params)):\n",
     "        plt.plot(range(epochs), accs[i][0], label='Weight decay parameter:'\n",
     "                 + str(params[i]['weight_decay_parameter']))\n",
-    "    plt.xlabel('epochs')\n",
+    "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
