Corrected the code

--- a/assignment1_question_a/Part_A_Question_5.ipynb
+++ b/assignment1_question_a/Part_A_Question_5.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "import pylab as plt\n",
     "import multiprocessing as mp\n",
-    "from train import train, epochs"
+    "from train import train, epochs, get_data"
    ]
   },
   {
@@ -486,6 +486,7 @@
    ],
    "source": [
     "def main():\n",
+    "    data = get_data()\n",
     "    params = []\n",
     "    param = {}\n",
     "    param['weight_decay_parameter'] = 1e-6\n",
@@ -493,6 +494,7 @@
     "    param['hidden_layer_neuron_num'] = 10\n",
     "    param['required'] = 'train accuracy and test accuracy'\n",
     "    param['hidden_layer_num'] = 2\n",
+    "    param['data'] = data\n",
     "    params.append(param)\n",
     "    \n",
     "    accs = []\n",
@@ -508,6 +510,7 @@
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Accuracy')\n",
     "    plt.legend()\n",
+    "    plt.savefig('Q5.png', bbox_inches='tight', dpi=100)\n",
     "    plt.show()\n",
     "\n",
     "if __name__ == '__main__':\n",
