--- a/assignment1_question_a/ Part_A_Question_3.ipynb
+++ b/assignment1_question_a/ Part_A_Question_3.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "import pylab as plt\n",
     "import multiprocessing as mp\n",
-    "from train import train, epochs"
+    "from train import train, epochs, get_data"
    ]
   },
   {
@@ -49,6 +49,7 @@
    "outputs": [],
    "source": [
     "def main():\n",
+    "    data = get_data()\n",
     "    params = []\n",
     "    param1 = {}\n",
     "    param1['weight_decay_parameter'] = 1e-6\n",
@@ -56,6 +57,7 @@
     "    param1['hidden_layer_neuron_num'] = 5\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
     "    param1['hidden_layer_num'] = 1\n",
+    "    param1['data'] = data\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
     "    param4 = param1.copy()\n",
@@ -80,6 +82,7 @@
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
+    "    plt.savefig('Q3.png', bbox_inches='tight', dpi=100)\n",
     "    plt.show()\n",
     "    \n",
     "    \n",
