--- a/assignment1_question_a/ Part_A_Question_4.ipynb
+++ b/assignment1_question_a/ Part_A_Question_4.ipynb
@@ -48,9 +48,10 @@
    "source": [
     "import pylab as plt\n",
     "import multiprocessing as mp\n",
-    "from train import train, epochs\n",
+    "from train import train, epochs, get_data\n",
     "\n",
     "def main():\n",
+    "    data = get_data()\n",
     "    params = []\n",
     "    param1 = {}\n",
     "    param1['weight_decay_parameter'] = 0\n",
@@ -58,6 +59,7 @@
     "    param1['hidden_layer_neuron_num'] = 15 #temp\n",
     "    param1['required'] = 'cross-validation accuracy'\n",
     "    param1['hidden_layer_num'] = 1\n",
+    "    param1['data'] = data\n",
     "    param2 = param1.copy()\n",
     "    param3 = param1.copy()\n",
     "    param4 = param1.copy()\n",
@@ -82,6 +84,7 @@
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Cross Validation Accuracy')\n",
     "    plt.legend()\n",
+    "    plt.savefig('Q4.png', bbox_inches='tight', dpi=100)\n",
     "    plt.show()\n",
     "    \n",
     "\n",
