--- a/assignment1_question_a/Plot_Test&Train_Accuracy_For_Q2-Q4.ipynb
+++ b/assignment1_question_a/Plot_Test&Train_Accuracy_For_Q2-Q4.ipynb
@@ -62,11 +62,11 @@
     "    param1['required'] = 'train accuracy and test accuracy'\n",
     "    param1['hidden_layer_num'] = 1\n",
     "    param1['data'] = data\n",
-    "#     params.append(param1)\n",
+    "    params.append(param1)\n",
     "    \n",
     "    param2 = param1.copy()\n",
     "    param2['hidden_layer_neuron_num'] = 25\n",
-    "#     params.append(param2)\n",
+    "    params.append(param2)\n",
     "    \n",
     "    param3 = param2.copy()\n",
     "    param3['weight_decay_parameter'] = 0\n",
@@ -83,11 +83,11 @@
     "        plt.xlabel('Epochs')\n",
     "        plt.ylabel('Accuracy')\n",
     "        plt.legend()\n",
-    "        if (i == 2):\n",
+    "        if (i == 0):\n",
     "            plt.savefig('Q2_batch_size_64.png', bbox_inches='tight', dpi=100)\n",
     "        if (i == 1):\n",
     "            plt.savefig('Q3_neuron_num_25.png', bbox_inches='tight', dpi=100)\n",
-    "        if (i == 0):\n",
+    "        if (i == 2):\n",
     "            plt.savefig('Q4_decay_parameter_0.png', bbox_inches='tight', dpi=100)\n",
     "        plt.show()\n",
     "\n",
