finish question b folder structure

--- a/assignment1/assignment1_question_b/others/question_b.ipynb
+++ b/assignment1/assignment1_question_b/others/question_b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = '/Users/heyuhao/Documents/GitHub/school_project/cz4042/assignment1_question_b/admission_predict.csv'\n",
+    "csv_file = 'admission_predict.csv'\n",
     "\n",
     "df = pd.read_csv(csv_file, index_col=[0])"
    ]
@@ -181,58 +181,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preperation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((280, 7), (120, 7), (280, 1), (120, 1))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "seed = 10\n",
-    "\n",
-    "np.random.seed(seed)\n",
-    "\n",
-    "data = df.values\n",
-    "np.random.shuffle(data)\n",
-    "\n",
-    "X = data[:, :-1]\n",
-    "y = data[:, -1].reshape(-1,1)\n",
-    "\n",
-    "def scale(X, decimals):\n",
-    "    return np.round((X - np.mean(X, axis=0))/ np.std(X, axis=0), decimals=decimals)\n",
-    "\n",
-    "X = scale(X, 4)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Define all libraries and functions needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,11 +206,59 @@
     "from keras import optimizers\n",
     "from keras.regularizers import l2\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "def scale(X, decimals):\n",
+    "    return np.round((X - np.mean(X, axis=0))/ np.std(X, axis=0), decimals=decimals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preperation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(280, 7) (120, 7) (280, 1) (120, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 10\n",
+    "\n",
+    "np.random.seed(seed)\n",
+    "\n",
+    "data = df.values\n",
+    "np.random.shuffle(data)\n",
+    "\n",
+    "X = data[:, :-1]\n",
+    "y = data[:, -1].reshape(-1,1)\n",
+    "\n",
+    "X = scale(X, 4)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = np.array(X_train), np.array(X_test), np.array(y_train), np.array(y_test)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+    "\n",
+    "np.save('./npy/X_train.npy', X_train)\n",
+    "np.save('./npy/X_test.npy', X_test)\n",
+    "np.save('./npy/y_train.npy', y_train)\n",
+    "np.save('./npy/y_test.npy', y_train)"
    ]
   },
   {
