Corrected the shuffle

--- a/assignment1/assignment1_question_a/Part_A_Question_1.ipynb
+++ b/assignment1/assignment1_question_a/Part_A_Question_1.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "import pylab as plt\n",
     "import multiprocessing as mp\n",
-    "from train import train, epochs, get_data"
+    "from train import train, epochs, get_data, divide_data_for_training_and_testing"
    ]
   },
   {
@@ -488,6 +488,7 @@
     "# This file was also utlizied to plot train & test accuracy for q2-q4 in part one\n",
     "\n",
     "def main():\n",
+    "    divide_data_for_training_and_testing()\n",
     "    data = get_data()\n",
     "    params = []\n",
     "    param = {}\n",
@@ -498,21 +499,16 @@
     "    param['hidden_layer_num'] = 1\n",
     "    param['data'] = data\n",
     "    params.append(param)\n",
+    "    acc = train(param)\n",
     "    \n",
-    "    accs = []\n",
-    "    for param in params:\n",
-    "        acc = train(param)\n",
-    "        accs.append(acc)\n",
-    "        \n",
     "    plt.figure()\n",
-    "    for i in range(len(params)):\n",
-    "        plt.plot(range(epochs), accs[i][0], label='Train Accuracy')\n",
-    "        plt.plot(range(epochs), accs[i][1], label='Test Accuracy')\n",
+    "    plt.plot(range(epochs), acc[0], label='Train Accuracy')\n",
+    "    plt.plot(range(epochs), acc[1], label='Test Accuracy')\n",
     "        \n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Accuracy')\n",
     "    plt.legend()\n",
-    "    plt.savefig('Q4_decay_parameter_0.png', bbox_inches='tight', dpi=100)\n",
+    "    plt.savefig('Q1.png', bbox_inches='tight', dpi=100)\n",
     "    plt.show()\n",
     "\n",
     "if __name__ == '__main__':\n",
