--- a/assignment1/assignment1_question_b/others/question_b.ipynb
+++ b/assignment1/assignment1_question_b/others/question_b.ipynb
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preperation"
+    "## Data Preperation For Q1, Q2"
    ]
   },
   {
