--- a/assignment1/assignment1_question_b/others/question_b.ipynb
+++ b/assignment1/assignment1_question_b/others/question_b.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "(400, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +168,7 @@
        "5                  0             0.65  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
     "np.save('./npy/X_train.npy', X_train)\n",
     "np.save('./npy/X_test.npy', X_test)\n",
     "np.save('./npy/y_train.npy', y_train)\n",
-    "np.save('./npy/y_test.npy', y_train)"
+    "np.save('./npy/y_test.npy', y_test)"
    ]
   },
   {
@@ -266,6 +266,38 @@
    "metadata": {},
    "source": [
     "## Q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utensils import *\n",
+    "X_train, X_test, y_train, y_test = load_data(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(280, 7)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
    ]
   },
   {
@@ -762,9 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -830,11 +860,11 @@
     "#a) keep 6 features\n",
     "\n",
     "features = list(df.columns)[:-1]\n",
-    "print(features, '\\n')\n",
+    "print('All features: {}\\n'.format(features, '\\n'))\n",
     "\n",
     "mse = dict(zip(features, [0 for i in features]))\n",
     "\n",
-    "epochs=2800\n",
+    "epochs=1400\n",
     "\n",
     "for i in range(len(features)):\n",
     "    \n",
@@ -855,9 +885,9 @@
     "    model.compile(optimizer=optimizers.SGD(lr=lr),\n",
     "                  loss='mse')\n",
     "\n",
-    "    h = model.fit(X_train_removed, y_train, batch_size=batch_size, epochs=epochs, verbose=0, validation_data=(X_test_removed, y_test), shuffle=True)\n",
+    "    h = model.fit(X_train_removed, y_train, batch_size=batch_size, epochs=epochs, verbose=1, shuffle=True)\n",
     "    \n",
-    "    mse[excluded_feature] = h.history['val_loss'][-1]\n",
+    "    mse[excluded_feature] = model.evaluate(x=X_test_removed, y_test)\n",
     "    \n",
     "    print(f'mse: {mse[excluded_feature]}')\n",
     "    \n",
